@@ -1,5 +1,13 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - Previously the code allowed for an empty applicability_criteria hash, which
+   resulted in a particular set of QC criteria being applied to every and any
+   product. Very early on this was an intended behaviour for UKB data. The main
+   filter was the study id. The default section of the product configuration
+   file does not have an external filter, so there is a real danger of the
+   review check being run indiscriminately for any product. While this will
+   never be an intention, small errors in the YML file might have this effect.
+
 release 72.2.1 (2024-10-04)
  - Added .github/dependabot.yml file to auto-update GitHub actions
  - GitHub CI - updated deprecated v2 runner action to v3
